# Traveller-Fever-Differential

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  project-59-traveller-fever-differential.md  pyproject.toml
.github/workflows/: ci.yml  monthly_priors_update.yml
app/: streamlit_app.py
data/clinical_knowledge/: cdc_yellow_book_extraction.yaml
data/processed/: destination_priors.yaml  destination_priors_shrunk.yaml  live_prior_multipliers.yaml  shrinkage_diagnostics.yaml  validation_cases.yaml  validation_cases_bottieau.yaml  validation_cases_combined.yaml
osf/: amendment_log.md  ethics_determination.md  registration.md
outputs/supplementary/: evidence_source_table.md  tripod_ai_checklist.md
outputs/tables/: base_rate_sensitivity.yaml  benchmark_metrics.yaml  benchmark_results.csv  classifier_evaluation.yaml  decision_curve.yaml  external_benchmarks.yaml  lr_calibration.yaml  obrien_calibrated_simulation.yaml  perturbation_sensitivity.yaml  preregistered_statistics.yaml  prior_ablation.yaml  simulation_validation.yaml  stratified_provenance.yaml
src/: utils.py
src/inference/: naive_bayes.py
src/ingest/: scrape_promed.py  scrape_who_don.py  signal_classifier.py
src/priors/: build_base_priors.py  hierarchical_shrinkage.py  live_outbreak_smoothing.py
src/validation/: base_rate_sensitivity.py  benchmark.py  bottieau_calibrated_cases.py  decision_curve.py  external_benchmarks.py  extract_case_series.py  generate_figures.py  lr_calibration.py  obrien_calibrated_simulation.py  prior_ablation.py  (+4 more)
tests/: test_naive_bayes.py  test_outbreak_smoothing.py
(+29 files in other folders)
